tests/valid/test_fun_11.wyal
function f(int x) -> (int y, int z)

assert:
    if:
        f(0)#0 > 0
    then:
        f(0)#0 >= 0